--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <button>Let's Start</button>
             </div>
             <div class="image">
-                <img src="/img/mushrooms.jpg" alt="Mushrooms on the green tree" srcset="">
+                <img src="mushrooms.jpg" alt="Mushrooms on the green tree" srcset="">
             </div>
         </div>
       </div>
